flink-dist/src/main/flink-bin/htap_confs/conf_k8s/dashboard-ingress.yaml
################################################################################
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
################################################################################

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flink-native-ingress
  namespace: flink
  annotations:
    "nginx.ingress.kubernetes.io/proxy-body-size": "100m"
    "nginx.ingress.kubernetes.io/proxy-connect-timeout": "300"
    "nginx.ingress.kubernetes.io/proxy-send-timeout": "300"
    "nginx.ingress.kubernetes.io/proxy-read-timeout": "300"
spec:
  rules:
    - host: "flink-native-test.lf-cloudnative.byted.org"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: flink-native-test-rest
              servicePort: 80
